--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -5,6 +5,7 @@ pid /var/run/nginx.pid;
 
 events {
     worker_connections 1024;
+    use epoll;
 }
 
 http {
@@ -17,75 +18,150 @@ http {
 
     access_log /var/log/nginx/access.log main;
 
+    # Performance optimizations
     sendfile on;
     tcp_nopush on;
+    tcp_nodelay on;
     keepalive_timeout 65;
+    types_hash_max_size 2048;
+    client_max_body_size 5M;
+
+    # Gzip compression
     gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml text/javascript 
+               application/json application/javascript application/xml+rss 
+               application/rss+xml application/atom+xml image/svg+xml 
+               text/x-component text/x-cross-domain-policy;
 
     # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
-    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=30r/s;
+    limit_req_zone $binary_remote_addr zone=general:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=api:10m rate=100r/m;
 
-    # Backend API
+    # Upstream servers
     upstream backend {
-        server backend:8000;
+        least_conn;
+        server backend:8000 max_fails=3 fail_timeout=30s;
+        keepalive 32;
     }
 
-    # Frontend
     upstream frontend {
         server frontend:3000;
+        keepalive 32;
     }
 
+    # Redirect HTTP to HTTPS
     server {
         listen 80;
-        server_name localhost;
-        client_max_body_size 10M;
+        server_name _;
+        
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
 
-        # Frontend
         location / {
-            proxy_pass http://frontend;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            return 301 https://$host$request_uri;
         }
+    }
 
-        # Backend API
-        location /api/ {
-            limit_req zone=api_limit burst=20 nodelay;
-            proxy_pass http://backend/api/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+    # HTTPS Server
+    server {
+        listen 443 ssl http2;
+        server_name yourdomain.com www.yourdomain.com;
 
-        # WebSocket
-        location /ws {
-            proxy_pass http://backend/ws;
+        # SSL Configuration
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+        ssl_session_tickets off;
+
+        # Security headers
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
+
+        # API endpoints with rate limiting
+        location /api/v1/ {
+            limit_req zone=api burst=20 nodelay;
+            
+            proxy_pass http://backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $server_name;
+            
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+            
+            # Cache control for API responses
+            proxy_cache_bypass $http_pragma $http_authorization;
+            add_header Cache-Control "max-age=0, no-cache, no-store, must-revalidate";
         }
 
-        # Static files (uploads)
-        location /uploads/ {
-            alias /var/www/uploads/;
-            expires 30d;
-            add_header Cache-Control "public, immutable";
-        }
-
-        # Health check
+        # Health check endpoint
         location /health {
             access_log off;
             proxy_pass http://backend/health;
+            proxy_http_version 1.1;
+        }
+
+        # Admin panel
+        location /admin/ {
+            limit_req zone=api burst=10 nodelay;
+            
+            proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Frontend - main application
+        location / {
+            limit_req zone=general burst=20 nodelay;
+            
+            proxy_pass http://frontend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Next.js specific
+            proxy_buffering off;
+            proxy_request_buffering off;
+        }
+
+        # Static assets caching
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            proxy_pass http://frontend;
+            proxy_cache_valid 200 30d;
+            add_header Cache-Control "public, max-age=2592000, immutable";
+            access_log off;
+        }
+
+        # Deny access to sensitive files
+        location ~ /\. {
+            deny all;
+            access_log off;
+            log_not_found off;
         }
     }
 }
